Spacing adjustments and fix rollover color on external link

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -59,7 +59,6 @@
 		font-size: 1.625rem;
 		font-weight: bold;
 		padding: 0;
-		margin-bottom: 0;
 	}
 	
 	h2::after {
