--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -27,8 +27,8 @@ ul.usa-nav-primary li a {
 		margin-left: 15px;
 		padding: 12px;
 		&:hover {
-			border-color: $teal;
-			color: $teal;
+			border-color: $red;
+			color: $red;
 		}
 	}
 }
